--- a/index.html
+++ b/index.html
@@ -5,6 +5,19 @@
     <title>Барбершоп "Бородинский"</title>
 </head>
 <body>
+    <header>
+        <nav>
+            <ul>
+            <li><a href="blank.html">Информация</a></li>
+               <li><a href="blank.html">Новости</a></li>
+               <li><a href="price.html">Прайс-лист</a></li>
+               <li><a href="catalog.html">Магазин</a></li>
+               <li><a href="blank.html">Контакты</a></li>
+                </ul>
+                <a href="blank.html">Вход</a>
+             </nav>
+
+    </header>
     
 </body>
 </html>
