--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
 <body>
     <header>
         <nav>
+            <a>
+                <img src= "img/index-logo.svg" width="368" height="153"
+                alt="Логотип барбершопа Бородинский"
+             </a>
             <ul>
             <li><a href="blank.html">Информация</a></li>
                <li><a href="blank.html">Новости</a></li>
@@ -18,6 +22,30 @@
              </nav>
 
     </header>
+    <main><h1>Барбершоп Бородинский</h1>
+   <section>
+       <h2>Преимувщества</h2>
+       <ul>
+         <li>
+            <h3>Быстро</h3>
+            <p>Мы делаем свою работу быстро!<br> Два часа пролетят незаметно и вы - счастливый обладатель стильной
+                стрижки-минутки!
+            </p>
+         </li>
+         <li>
+             <h3>Круто</h3>
+             <p>Забудте,как вы стриглись раньше.<br> Мы сделаем из вас звесду футбола или кино!<br>
+             Во всяком случае внешне.
+            </p>
+         </li>
+         <li>
+             <h3>Дорого</h3>
+             <p>Наши мастера - профессионалы своего дела и не могут стоить дешево<br>
+            К тому же,разве цена не дает определенный статус?</p>
+         </li>
+       </ul>
+   </section>
+    </main>
     
 </body>
 </html>
