--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         <nav>
             <a>
                 <img src= "img/index-logo.svg" width="368" height="153"
-                alt="Логотип барбершопа Бородинский"
+                alt="Логотип барбершопа Бородинский">
              </a>
             <ul>
             <li><a href="blank.html">Информация</a></li>
@@ -68,7 +68,7 @@
        <figure>
            <a href="#">
                <img src="img/studio.jpg" width="286" height="164"
-               alt="Интерьер"
+               alt="Интерьер">
            </a>
        </figure>
        <button type="button" disabled>Назад</button>
@@ -123,10 +123,12 @@
     <from action="https://echo.htmlacademy.ru" method="post">
         <p>
     <label for="login-login">Логин</label>
-<input id="login-login"type="email" name="login" placeholder="email@example.com>
-        </p>
-        <p>
- <label for="login-passoword">Пароль</label>
+<input id="login-login"type="email" name="login" placeholder="email@example.com          
+
+
+        /p>
+        p>
+ label for="login-passoword>Пароль</label>
  <input id="login-passoword" type="password"
  name="password" placeholder="00000000">
  </p>
