--- a/catalog.html
+++ b/catalog.html
@@ -1,12 +1,215 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>каталог</title>
+    <title>Каталог - Барбершоп "Бородинский"</title>
 </head>
 <body>
-    
-</body>
-</html>
+    <header>
+        <nav>
+            <a href="index.html">
+                <img src= "img/logo.svg" width="11" height="24"
+                alt="Логотип барбершопа Бородинский">
+             </a>
+            <ul>
+            <li><a href="blank.html">Информация</a></li>
+               <li><a href="blank.html">Новости</a></li>
+               <li><a href="price.html">Прайс-лист</a></li>
+               <li><a href="catalog.html">Магазин</a></li>
+               <li><a href="blank.html">Контакты</a></li>
+                </ul>
+                <a href="blank.html">Вход</a>
+             </nav>
+
+    </header>
+    <main>
+        <h1>Средства для ухода</h1>
+        <ul>
+            <li>
+                <a href="index.html">Главная</a>
+            </li>
+            <li>
+                <a href="catalog.html">Магазин</a>
+            </li>
+            <li>
+                Средства для ухода
+            </li>
+        </ul>
+        <section>
+            <h2>Фильтр товаров</h2>
+            <from metgod="get" action="https://echo.htmlacademy.ru">
+<fieldset><legend>Производители:</legend>
+    <ul>
+        <li><input type="checkbox" name="baxter-of-califirnia" id="filter-baxter-of-california" checked>
+        <label for="filter-baxter-of-california">Baxter of California</label>
+    </li>
+    <li>
+        <input type="checkbox" name="mr-natty" 
+        id="filter-mr-natty">
+        <label for="filter-mr-natty">MR Natty</label>
+    </li>
+    <li>
+        <input type="checkbox" name="suavecito" id="filter-suavecito" checked>
+        <label for="filter-suavecito">Suavecito</label>
+    </li>
+    <li>
+        <input type="checkbox" name="alin-goetz" id="filter-malin-goetz">
+        <label for="filter-malin-goetz">Malin+Goetz</label>
+    </li>
+    <li>
+        <input type="checkbox" name="murrays" id="filter-murrays">
+        <label for="filter-murrays">Murrays</label>
+    </li>
+    <li>
+        <input type="checkbox" name="american-crew" id="filter-american-crew" checked>
+        <label for="filter-american-crew">American Crew</label>
+    </li>
+    </ul>
+</fieldset>
+<fieldset>
+    <legend>Группы товаров:</legend>
+    <ul>
+        <li>
+            <input type="radio" name="product-group" value="shaving" id="filter-shave">
+            <label for="filter-shave">Бритвенные принадлежности</label>
+        </li>
+        <li>
+            <input type="radio" name="product-group"value="hair-care" id="filter-care" checked>
+            <label for="filter-care">Средства для ухода</label>
+        </li>
+        <li>
+            <input type="radio" name="product-group" value="accessories" id="filter-accessories">
+            <label for="filter-accessories">Аксессуары</label>
+        </li>
+    </ul>
+</fieldset>
+<button type="submit">Показать</button>
+            </from>
+        </section>
+        
+        <section>
+            <h2>Список средств для ухода</h2>
+            <ul>
+                <li>
+                    <a href="product.html">
+                        <h3>Набор для путешествий "Baxter of Califirnia"</h3>
+                        <p>
+                            <img src="img/product-1.jpg" width="220" height="165" alt="Набор для путешествий
+                             Baxter of Calofornia">
+                        </p>
+                    </a>
+                    <p>2900
+                        <button type="button">Купить</button>
+                    </p>
+                </li>
+                <li>
+                    <a href="product.html">
+                        <h3>Увлажнающий кондиционер "Baxter of Califirnia"</h3>
+                        <p>
+                            <img src="img/product-2.jpg" width="220" height="165" alt="Увлажнающий кондиционер
+                             Baxter of Calofornia">
+                        </p>
+                    </a>
+                    <p>750
+                        <button type="button">Купить</button>
+                    </p>
+                </li>
+                <li>
+                    <a href="product.html">
+                        <h3>Гель для волос "Suavecito"</h3>
+                        <p>
+                            <img src="img/product-3.jpg" width="220" height="165" alt="Гель для волос Suavecito">
+                        </p>
+                    </a>
+                    <p>290
+                        <button type="button">Купить</button>
+                    </p>
+                </li>
+                <li>
+                    <a href="product.html">
+                        <h3>Гель для волос "American crew"</h3>
+                        <p>
+                            <img src="img/product-4.jpg" width="220" height="165" alt="Гель для волос "American crew">
+                        </p>
+                    </a>
+                    <p>300
+                        <button type="button">Купить</button>
+                    </p>
+                </li>
+                <li>
+                    <a href="product.html">
+                        <h3>Набор для бритья"Baxter of California</h3>
+                        <p>
+                            <img src="img/product-5.jpg" width="220" height="165" 
+                            alt="">Набор для бритья"Baxter of California
+                        </p>
+                    </a>
+                    <p>3900
+                        <button type="button">Купить</button>
+                    </p>
+                </li>
+            </ul>
+            <ul>
+                <li>
+                    <a href="#">1</a>
+                </li>
+                <li>
+                    <a>2</a>
+                </li>
+                <li>
+                    <a href="#">2</a>
+                </li>
+                <li>
+                    <a href="#">4</a>
+                </li>
+            </ul>
+        </section>
+    </main>
+    <footer>
+        <section>
+            <h2>Как нас найти</h2>
+            <p>Барбершоп "Бородинский"<br>
+                Адрес:г. Санкт-Петербург, Б. Конюшенная,Д.19/8<br>
+                <a href="blank.html">Как нас найти</a><br>
+                Телефон: <a href="tel:+79611808916">+7 (961) 180-89-16</a>
+            </p>
+        </section>
+        <section>
+            <h2>Давайте дружить!</h2>
+            <ul><li><a href="#">вконтакте</a></li>
+            <li><a href="#">фейсбук</a></li>
+        <li><a href="#">инстаграм</a>
+        </li>
+           </ul>
+        </section>
+         <p>Разработанно:
+        <a href="https://htmlacademy.ru">HTML Academy</a><br>
+        <a href="https://vk.com/danchiksimonov">Даня Симонов</a>
+         </p>
+    </footer>
+    <section>
+        <h2>Личный кабинет</h2>
+    <p>Введите пожалуйста свой логин и пароль</p>
+    <from action="https://echo.htmlacademy.ru" method="post">
+        <p>
+    <label for="login-login">Логин</label>
+<input id="login-login"type="email" name="login" placeholder="email@example.com          
+
+
+        /p>
+        p>
+ label for="login-passoword>Пароль</label>
+ <input id="login-passoword" type="password"
+ name="password" placeholder="00000000">
+ </p>
+        <p>
+ <label>
+     <input type="checkbox" name="remember">Запомните меня</label>
+ <a href="#">Я забыл пароль!</a>
+
+ <button type="submit">Войти</button>
+</from>
+<button type="button">Закрыть</button>
+</section>
+     </body>
+     </html>
